--- a/Resources/DataDictionary.resx
+++ b/Resources/DataDictionary.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Button" xml:space="preserve">
+    <value>Button</value>
+  </data>
   <data name="CamundaProssesSettings" xml:space="preserve">
     <value>تنظیمات ویجت ساز کموندا</value>
   </data>
@@ -154,6 +157,9 @@
     <value>وضعیت</value>
   </data>
   <data name="IsTestData" xml:space="preserve">
+    <value>داده تستی</value>
+  </data>
+  <data name="IsTrstData" xml:space="preserve">
     <value>داده تستی</value>
   </data>
   <data name="List" xml:space="preserve">
